<resources>
    <string name="app_name">Pet Fooding Control</string>
    <string name="main_logo">Main Pet Fooding Control logo</string>

    <!-- Global -->
    <string name="btn_save">Save</string>
    <string name="btn_OK">OK</string>
    <string name="btn_add">Add</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_delete">Delete</string>
    <string name="error_email">Email format should match ****@****</string>
    <string name="error_date">Invalid date, it does not match the dd/MM/yy format</string>

    <!-- Login -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login_action">Login</string>
    <string name="checkbox_keep_login">Keep me logged in</string>
    <string name="btn_create_account">Create an account</string>
    <string name="toast_input_empty">Please complete all fields.</string>
    <string name="welcome">Welcome</string>
    <string name="toast_failed_login_wrong_password">Login failed : wrong password !</string>
    <string name="toast_failed_login_user_unknown">Login failed : unknown user !</string>

    <!-- Main Activity -->
    <string name="title_activity_main">Pet Fooding Control</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pet Fooding Control User</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <!-- Main activity permissions-->
    <string name="permission_grant_access_needed">You need to grant access to </string>
    <string name="permission_camera">camera</string>
    <string name="permission_read_external_storage">external storage reading</string>

    <!-- Pets -->
    <string name="menu_pets">My pets</string>
    <string name="imv_card_pet_desc">Pet image</string>
    <string name="pet_status_unknown">Unknown status</string>
    <string name="pet_status_fed">Completely fed</string>
    <string name="pet_status_can_be_fed">Can be fed</string>
    <string name="txt_pet_card_is_owner">P</string>
    <string name="title_pet_deletion">Pet deletion</string>
    <string name="pet_deletion_text">Are you sure you want to delete this pet ?</string>
    <string name="pet_deletion_success">Pet deleted successfully</string>
    <string name="pet_deletion_failure">Pet deletion failure</string>
    <string name="title_pet_feeder_status_deletion">Pet Feeder deletion</string>
    <string name="pet_feeder_status_deletion_text">Are you sure you want to stop being a feeder for this pet ?</string>
    <string name="pet_feeder_status_deletion_success">Pet Feeder deleted successfully</string>
    <string name="pet_feeder_status_deletion_failure">Pet Feeder deletion failure</string>

    <!-- Account Management -->
    <string name="title_activity_account_management">AccountManagementActivity</string>
    <string name="account_activity_management_type">AccountActivityType</string>
    <string name="menu_account_settings">Manage account</string>
    <string name="title_account_creation">Create a new account</string>
    <string name="title_account_modification">Modify the account</string>
    <string name="modify_password_switch">modify the password</string>
    <string name="content_description_user_photo">Users\'s photo</string>
    <string name="content_description_btn_take_user_photo">take a photo button</string>
    <string name="content_description_btn_pick_user_photo_on_disk">Pick a photo on the disk</string>
    <string name="hint_account_username">Username</string>
    <string name="hint_account_email">Email</string>
    <string name="hint_account_password">Password</string>
    <string name="hint_account_retype_password">Retype Password</string>
    <string name="toast_passwords_mismatch">Two different passwords have been entered</string>
    <string name="toast_email_invalid">The email entered is not valid</string>
    <string name="toast_account_created">Account created !</string>
    <string name="toast_account_not_created">Account not created !</string>
    <string name="toast_account_update_success">Account successfully updated !</string>
    <string name="toast_account_update_failure">Account not updated !</string>
    <string name="intent_title_select_picture">Select a picture</string>

    <!-- Pet management -->
    <string name="tab_text_pet_general">General</string>
    <string name="tab_text_pet_food">Food</string>
    <string name="tab_text_pet_feeders">Feeders</string>

    <!-- Add a pet -->
    <string name="title_add_a_pet_activity">Add a pet</string>

    <!-- Modify a pet -->
    <string name="title_pet_modifcation_activity">Modify a pet</string>

    <!-- Pet management General-->
    <string name="txt_pet_birthdate">Date of birth</string>
    <string name="content_description_pet_photo">pet\'s photo</string>
    <string name="content_description_btn_pick_pet_photo_on_disk">pick a photo on the disk</string>
    <string name="content_description_btn_take_pet_photo">take a photo button</string>
    <string name="hint_pet_name">Name</string>
    <string name="hint_pet_birthdate">Date of birth</string>
    <string name="error_empty_pet_name">Please provide a pet name</string>
    <string name="error_date_invalid_or_empty">Please provide a correct birth date</string>

    <!-- Pet management Food -->
    <string name="title_daily_food">Set the total daily weight of food</string>
    <string name="title_standard_portions">Set the weight of standard portions</string>
    <string name="hint_daily_food">Total weight (g)</string>
    <string name="hint_food_portion1">Portion 1 (g)</string>
    <string name="hint_food_portion2">Portion 2 (g)</string>
    <string name="hint_food_portion3">Portion 3 (g)</string>
    <string name="hint_food_portion4">Portion 4 (g)</string>
    <string name="hint_food_portion5">Portion 5 (g)</string>
    <string name="hint_food_portion6">Portion 6 (g)</string>

    <!-- Pet management Feeders -->
    <string name="title_dialog_new_pet">Add a new feeder</string>
    <string name="new_feeder_success">New feeder successfully added</string>
    <string name="error_user_mail_entered">You cannot add yourself as a feeder</string>
    <string name="error_feeder_mail">Feeder does noy exist</string>
    <string name="error_feeder_mail_already_in_list">Feeder already attached</string>
    <string name="btn_new_feeder">Add</string>
    <string name="new_feeder_confirm_delete">Delete</string>
    <string name="new_feeder_confirm_delete_title">Pet Feeder delete</string>
    <string name="new_feeder_confirm_delete_text">Are you sure you want to delete this feeder ?
    </string>

    <!-- Pet fooding -->
    <string name="title_activity_pet_fooding">My Pet</string>
    <string name="tab_text_pet_fooding_food">Food</string>
    <string name="tab_text_pet_fooding_weight">Weight</string>

    <!-- Pet fooding food -->    
    <string name="petfooding_quantity_today">Quantity aldready given today</string>
    <string name="petfooding_feed_free_portion">Give a free portion (g)</string>
    <string name="petfooding_feed_preset_portions">Give a PreSet portion</string>
    <string name="hint_petfooding_free_portion">Free portion</string>
    <string name="petfooding_give_">Give</string>
    <string name="daily_weight_food_given_out_of"> g ouf of </string>
    <string name="daily_weight_food_given_g">g</string>
    <string name="give_free_portion_success">Fooding success !</string>
    <string name="give_free_portion_failure">Fooding failure !</string>

    <!-- Pet fooding weight -->
    <string name="petfoodind_last_weight_recorded">Last weight recorded</string>
    <string name="title_dialog_new_weighing">Enter new weight</string>
    <string name="hint_new_weighing">new weighing (g)</string>
    <string name="new_weighing_success">New weighing successfully added</string>
    <string name="new_weighing_error_empty">Please enter a new weight for the pet</string>
    <string name="new_weighing_error_unknown">Error : weighing not added</string>
    <string name="weight_le">on</string>
    <string name="weight_g">g</string>
    <string name="weight_new_weight_button">New weight</string>
    <string name="weight_history_button">History</string>
    <string name="title_dialog_weighing_history">Weighing history</string>
    <string name="btn_weight_history_close">Close</string>
    <string name="error_weighings_empty">No weighing done, impossible to show history</string>
</resources>
