<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.fragments.accountmanagement.AccountCreationFormFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/btn_pick_user_photo_on_disk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_btn_pick_user_photo_on_disk"
            android:src="@drawable/ic_file_download_black_24dp"
            app:layout_constraintStart_toEndOf="@+id/imv_user_photo"
            app:layout_constraintTop_toBottomOf="@+id/btn_take_user_photo" />

        <ImageButton
            android:id="@+id/btn_take_user_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_btn_take_user_photo"
            android:src="@drawable/ic_add_a_photo_black_24dp"
            app:layout_constraintStart_toEndOf="@+id/imv_user_photo"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imv_user_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_user_photo"
            android:maxWidth="@dimen/user_photo_width"
            android:maxHeight="@dimen/user_photo_height"
            android:minWidth="@dimen/user_photo_width"
            android:minHeight="@dimen/user_photo_height"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/login_fieldset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fieldset_top_margin"
        android:layout_marginBottom="@dimen/fieldset_bottom_margin"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fieldset_fields_spacing">

            <TextView
                android:id="@+id/txt_account_email_invalid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin_message_edit_text"
                android:text="@string/error_email"
                android:textColor="@color/design_default_color_error" />

            <EditText
                android:id="@+id/txt_account_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/txt_account_username"
                android:layout_width="411dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fieldset_fields_spacing"
                android:hint="@string/hint_account_username" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_mod_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fieldset_fields_spacing"
            android:switchPadding="@dimen/switch_padding"
            android:text="@string/modify_password_switch"
            android:visibility="gone" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/txt_account_password"
                android:layout_width="411dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fieldset_fields_spacing"
                android:ems="10"
                android:hint="@string/hint_account_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/txt_account_retype_password"
                android:layout_width="411dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fieldset_fields_spacing"
                android:ems="10"
                android:hint="@string/hint_account_retype_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_account_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/btn_validation_bottom_margin"
        android:text="@string/btn_save"
        android:textAlignment="center" />
</LinearLayout>

