<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.petfoodsettings.PetFoodSettingsFragment">

    <TextView
        android:id="@+id/txt_title_daily_food"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/title_margin_bottom"
        android:text="@string/title_daily_food"
        android:textSize="@dimen/title_police_size" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txt_daily_food"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fieldset_fields_spacing"
            android:inputType="number"
            android:hint="@string/hint_daily_food" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_title_standard_portions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/title_margin_bottom"
        android:text="@string/title_standard_portions"
        android:textSize="@dimen/title_police_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/txt_food_portion1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/field_horizontal_margin"
                android:layout_marginBottom="@dimen/fieldset_fields_spacing"
                android:hint="@string/hint_food_portion1"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/txt_food_portion2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/field_horizontal_margin"
                android:layout_marginBottom="@dimen/fieldset_fields_spacing"
                android:hint="@string/hint_food_portion2"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/txt_food_portion3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/field_horizontal_margin"
                android:layout_marginBottom="@dimen/fieldset_fields_spacing"
                android:hint="@string/hint_food_portion3"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/txt_food_portion4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/field_horizontal_margin"
                android:layout_marginBottom="@dimen/fieldset_fields_spacing"
                android:hint="@string/hint_food_portion4"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/txt_food_portion5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/field_horizontal_margin"
                android:layout_marginBottom="@dimen/fieldset_fields_spacing"
                android:hint="@string/hint_food_portion5"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/txt_food_portion6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/field_horizontal_margin"
                android:layout_marginBottom="@dimen/fieldset_fields_spacing"
                android:hint="@string/hint_food_portion6"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</LinearLayout>